src/objects/QPMS__R_R_Study_Profile__c.object
<CustomObject>
    <description>R&amp;R  Study Profile</description>
    <fields>
        <fullName>QPMS__Address__c</fullName>
        <description>Address</description>
        <inlineHelpText>Address</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Asset_Profile_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset Profile Criteria</description>
        <inlineHelpText>Asset Profile Criteria</inlineHelpText>
        <label>Asset Profile Criteria</label>
        <referenceTo>QPMS__Asset_Profile_Criteria__c</referenceTo>
        <relationshipLabel>R&amp;R  Study Profiles</relationshipLabel>
        <relationshipName>R_R_Study_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Asset_Profile__c</fullName>
        <description>Asset Profile</description>
        <formula>QPMS__Asset_Profile_Criteria__r.QPMS__Asset_Profile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Asset Profile</inlineHelpText>
        <label>Asset Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact__c</fullName>
        <description>This field is used to store contact name</description>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Cost__c</fullName>
        <description>Cost</description>
        <inlineHelpText>Cost</inlineHelpText>
        <label>Cost ($)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Criteria_Name__c</fullName>
        <formula>QPMS__Asset_Profile_Criteria__r.QPMS__Criteria_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criteria Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Measurement__c</fullName>
        <description>Measurement from criteria</description>
        <formula>QPMS__Asset_Profile_Criteria__r.QPMS__Measurement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Measurement from criteria</inlineHelpText>
        <label>Measurement</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Performed_By_Name__c</fullName>
        <formula>QPMS__Performed_By__r.FirstName +&apos;&apos;+QPMS__Performed_By__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Performed By</description>
        <inlineHelpText>Performed By</inlineHelpText>
        <label>Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R_R_Study_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Performed_Date__c</fullName>
        <description>Performed Date</description>
        <inlineHelpText>Performed Date</inlineHelpText>
        <label>Performed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Result__c</fullName>
        <description>Result</description>
        <inlineHelpText>Result</inlineHelpText>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Study_Code__c</fullName>
        <label>Study Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Study_Type__c</fullName>
        <description>Study Type</description>
        <inlineHelpText>Study Type</inlineHelpText>
        <label>Study Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Variable Range Method</fullName>
                </value>
                <value>
                    <fullName>Variable Range Method((Within Part Variation)</fullName>
                </value>
                <value>
                    <fullName>Attribute Guage Study (Short Method)</fullName>
                </value>
                <value>
                    <fullName>Attribute Guage Study (Long Method),</fullName>
                </value>
                <value>
                    <fullName>Bias</fullName>
                </value>
                <value>
                    <fullName>Linerarity</fullName>
                </value>
                <value>
                    <fullName>Attribute Gauge Study (Long Method),</fullName>
                    <isActive>false</isActive>
                    <label>Attribute Gauge Study (Long Method),</label>
                </value>
                <value>
                    <fullName>Attribute Gauge Study (Short Method)</fullName>
                    <isActive>false</isActive>
                    <label>Attribute Gauge Study (Short Method)</label>
                </value>
                <value>
                    <fullName>Linearity</fullName>
                    <isActive>false</isActive>
                    <label>Linearity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Telephone__c</fullName>
        <description>Telephone</description>
        <inlineHelpText>Telephone</inlineHelpText>
        <label>Telephone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Time_To_Complete__c</fullName>
        <description>Time To Complete</description>
        <inlineHelpText>Time To Complete</inlineHelpText>
        <label>Time To Complete (In Hrs)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <referenceTo>QPMS__Supplier_Profile__c</referenceTo>
        <relationshipLabel>R&amp;R  Study Profiles</relationshipLabel>
        <relationshipName>R_R_Study_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>R&amp;R  Study Profile</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>R&amp;R  Study Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>R&amp;R  Study Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>